# GaussMatrix

./: .dockerignore  .git-blame-ignore-revs  AGENTIC-STRATEGY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  RELEASE.md  book.toml  clippy.toml  deny.toml  flake.nix  gaussmatrix-example.toml  rustfmt.toml
src/admin/: Cargo.toml  admin.rs  context.rs  mod.rs  utils.rs
src/admin/agent/: audit_count.rs  audit_export.rs  audit_sign.rs  audit_tail.rs  audit_verify.rs  deprovision.rs  grant_set.rs  grant_show.rs  list.rs  mod.rs  profile.rs  provision.rs  quota.rs
src/admin/appservice/: list.rs  mod.rs  register.rs  show_config.rs  unregister.rs
src/admin/debug/: change_log_level.rs  create_jwt.rs  database_files.rs  database_stats.rs  dump_pdus.rs  echo.rs  first_pdu_in_room.rs  force_device_list_updates.rs  force_set_room_state_from_server.rs  get_auth_chain.rs  get_pdu.rs  get_remote_pdu.rs  get_remote_pdu_list.rs  get_retained_pdu.rs  get_room_state.rs  get_short_pdu.rs  get_signing_keys.rs  get_verify_keys.rs  latest_pdu_in_room.rs  list_dependencies.rs  memory_stats.rs  mod.rs  parse_pdu.rs  ping.rs  resolve_true_destination.rs  resync_database.rs  runtime_interval.rs  runtime_metrics.rs  sign_json.rs  task_interval.rs  task_metrics.rs  time.rs  trim_memory.rs  verify_json.rs  verify_pdu.rs
src/admin/federation/: disable_room.rs  enable_room.rs  fetch_support_well_known.rs  incoming_federation.rs  mod.rs  remote_user_in_rooms.rs  scheduler_drive.rs  scheduler_status.rs
src/admin/media/: content_stats.rs  delete.rs  delete_all_from_server.rs  delete_all_from_user.rs  delete_by_event.rs  delete_list.rs  delete_range.rs  get_file_info.rs  get_remote_file.rs  get_remote_thumbnail.rs  mod.rs  preview.rs
src/admin/query/: mod.rs
src/admin/room/: delete.rs  exists.rs  list.rs  mod.rs  prune_empty.rs
src/admin/server/: admin_notice.rs  backup_database.rs  clear_caches.rs  list_backups.rs  list_features.rs  memory_usage.rs  mod.rs  reload_config.rs  reload_mods.rs  restart.rs  show_config.rs  shutdown.rs  uptime.rs
src/admin/token/: issue.rs  list.rs  mod.rs  revoke.rs
src/admin/user/: create_user.rs  deactivate.rs  deactivate_all.rs  delete_device.rs  delete_room_tag.rs  force_demote.rs  force_join_all_local_users.rs  force_join_list_of_local_users.rs  force_join_room.rs  force_leave_room.rs  force_promote.rs  get_room_tags.rs  last_active.rs  list_joined_rooms.rs  list_users.rs  make_user_admin.rs  mod.rs  put_room_tag.rs  redact_event.rs  reject_invites.rs  reset_password.rs
src/agent/: Cargo.toml  capability.rs  events.rs  gateway.rs  mcp.rs  mod.rs  provisioning.rs  tests.rs
src/api/: Cargo.toml  agent.rs  mod.rs  router.rs
src/api/client/: capabilities.rs  context.rs  dehydrated_device.rs  directory.rs  events.rs  filter.rs  gaussmatrix.rs  media.rs  media_legacy.rs  message.rs  mod.rs  openid.rs  presence.rs  profile.rs  redact.rs  relations.rs  rtc.rs  search.rs  send.rs  space.rs  state.rs  tag.rs  thirdparty.rs  threads.rs  to_device.rs  tuwunel.rs  typing.rs  unstable.rs  user_directory.rs  utils.rs  versions.rs  voip.rs  well_known.rs
src/api/oidc/: account.rs  auth_issuer.rs  auth_metadata.rs  authorize.rs  complete.rs  jwks.rs  mod.rs  registration.rs  revoke.rs  token.rs  userinfo.rs
src/api/router/: args.rs  auth.rs  client_ip.rs  handler.rs  request.rs  response.rs  state.rs
src/api/server/: backfill.rs  edu_types.rs  event.rs  event_auth.rs  get_missing_events.rs  hierarchy.rs  invite.rs  key.rs  make_join.rs  make_knock.rs  make_leave.rs  media.rs  mod.rs  openid.rs  publicrooms.rs  query.rs  send.rs  send_join.rs  send_knock.rs  send_leave.rs  state.rs  state_ids.rs  timestamp.rs  user.rs  utils.rs  version.rs  well_known.rs
src/apimodel/: Cargo.toml  auth.rs  content.rs  core_bridge.rs  endpoint.rs  error.rs  event.rs  mod.rs  router.rs  tests.rs  versions.rs  view.rs
src/client/: Cargo.toml  mod.rs  sync.rs  tests.rs
src/database/: Cargo.toml  de.rs  deserialized.rs  engine.rs  handle.rs  keyval.rs  map.rs  maps.rs  mod.rs  pool.rs  ser.rs  stream.rs  tests.rs  util.rs
src/database/benches/: ser.rs
src/database/engine/: backup.rs  cf_opts.rs  context.rs  db_opts.rs  descriptor.rs  events.rs  files.rs  logger.rs  memory_usage.rs  open.rs  repair.rs
src/database/map/: clear.rs  compact.rs  contains.rs  count.rs  del.rs  get.rs  get_batch.rs  insert.rs  keys.rs  keys_from.rs  keys_prefix.rs  put.rs  qry.rs  qry_batch.rs  remove.rs  rev_keys.rs  rev_keys_from.rs  rev_keys_prefix.rs  rev_stream.rs  rev_stream_from.rs  rev_stream_prefix.rs  stream.rs  stream_from.rs  stream_prefix.rs  watch.rs
src/database/pool/: configure.rs
src/database/stream/: items.rs  items_rev.rs  keys.rs  keys_rev.rs
src/fed/: Cargo.toml  mod.rs  sender.rs  tests.rs
src/main/: Cargo.toml  args.rs  lib.rs  logging.rs  main.rs  mods.rs  restart.rs  runtime.rs  sentry.rs  server.rs  signals.rs
src/main/benches/: main.rs
src/main/tests/: admin_execute_echo.rs  listener_conf_err.rs  listener_conf_ok.rs  listener_init_err.rs  listener_init_ok.rs  oauth_request_token.rs  smoke.rs  smoke_async.rs  smoke_shutdown.rs  storage_s3_upload_download.rs
src/router/: Cargo.toml  layers.rs  mod.rs  request.rs  router.rs  run.rs  serve.rs  shard.rs
src/router/layers/: tests.rs
src/router/serve/: plain.rs  tls.rs  unix.rs
src/service/: Cargo.toml  gm_resolve.rs  manager.rs  migrations.rs  mod.rs  once_services.rs  service.rs  services.rs  store_provider.rs
src/service/account_data/: direct.rs  mod.rs  room_tags.rs
src/service/admin/: console.rs  context.rs  create.rs  execute.rs  grant.rs  mod.rs  processor.rs  register.rs
src/service/agent/: mod.rs
src/service/appservice/: append.rs  mod.rs  namespace_regex.rs  registration_info.rs  request.rs
src/shard/: Cargo.toml  mod.rs  ring.rs  tests.rs
src/stateres/: Cargo.toml  auth.rs  cache.rs  event.rs  mod.rs  order.rs  power.rs  state_map.rs  tests.rs
src/store/: Cargo.toml  backend.rs  domain.rs  dyn_store.rs  error.rs  mem.rs  mod.rs  rocks.rs  store.rs  tests.rs
(+546 files in other folders)
