[package]
name = "gm-api"
categories.workspace = true
description = "GaussMatrix typed Matrix model (gm-api): event-content adapters bridging wire content into the resolution engine."
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lib]
name = "gm_api"
path = "mod.rs"
bench = false
crate-type = ["rlib"]

[features]
# Bridge a server PDU (gaussmatrix_core::matrix::Event) into the resolution
# model. Off by default so gm-api stays light and free of the ruma/core build.
core-bridge = ["dep:gaussmatrix-core"]

[dependencies]
gm-stateres.workspace = true
serde_json.workspace = true
serde_json.features = ["std"]
gaussmatrix-core = { workspace = true, optional = true }

[lints]
workspace = true
