[package]
name = "gm-fed"
categories.workspace = true
description = "GaussMatrix federation sender (gm-fed): per-destination outbound queues with independent backoff, preventing head-of-line blocking."
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lib]
name = "gm_fed"
path = "mod.rs"
bench = false
crate-type = ["rlib"]

[lints]
workspace = true
