[package]
name = "gaussmatrix"
default-run = "gaussmatrix"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
metadata.crane.workspace = true

[package.metadata.deb]
name = "gaussmatrix"
maintainer = "Jason Volk <jason@zemos.net>"
copyright = "2025, GaussMatrix Contributors"
license-file = ["../../LICENSE", "3"]
depends = "$auto, ca-certificates"
extended-description = """\
High performance Matrix homeserver written in Rust"""
section = "net"
priority = "optional"
conf-files = ["/etc/gaussmatrix/gaussmatrix.toml"]
maintainer-scripts = "../../debian/"
systemd-units = { unit-name = "gaussmatrix", start = false }
assets = [
	["../../debian/README.md", "usr/share/doc/gaussmatrix/README.Debian", "644"],
	["../../README.md", "usr/share/doc/gaussmatrix/", "644"],
	["target/release/gaussmatrix", "usr/sbin/gaussmatrix", "755"],
	["../../gaussmatrix-example.toml", "etc/gaussmatrix/gaussmatrix.toml", "640"],
]

[package.metadata.generate-rpm]
name = "gaussmatrix"
summary = """\
High performance Matrix homeserver written in Rust"""
require-sh = false
post_install_script = "rpm/postinst"
assets = [
	{ source = "target/release/gaussmatrix", dest = "/usr/sbin/gaussmatrix", mode = "755" },
	{ source = "README.md", dest = "/usr/share/doc/gaussmatrix/", mode = "644", doc = true },
	{ source = "gaussmatrix-example.toml", dest = "/etc/gaussmatrix/gaussmatrix.toml", mode = "640", config = "noreplace", user = "gaussmatrix", group = "gaussmatrix" },
	{ source = "rpm/gaussmatrix.service", dest = "/etc/systemd/system/", mode = "644" },
	{ source = "rpm/sysusers", dest = "/usr/lib/sysusers.d/gaussmatrix.conf", mode = "644" },
]

[package.metadata.arch]
name = "gaussmatrix"
pkgdesc = "High performance Matrix homeserver written in Rust"

[features]
default = [
	"brotli_compression",
	"element_hacks",
	"gzip_compression",
	"io_uring",
	"jemalloc",
	"jemalloc_conf",
	"media_thumbnail",
	"release_max_log_level",
	"systemd",
	"url_preview",
	"zstd_compression",
]

blurhashing = [
	"gaussmatrix-service/blurhashing",
]
brotli_compression = [
	"gaussmatrix-admin/brotli_compression",
	"gaussmatrix-api/brotli_compression",
	"gaussmatrix-core/brotli_compression",
	"gaussmatrix-router/brotli_compression",
	"gaussmatrix-service/brotli_compression",
]
bzip2_compression = [
	"gaussmatrix-admin/bzip2_compression",
	"gaussmatrix-api/bzip2_compression",
	"gaussmatrix-database/bzip2_compression",
	"gaussmatrix-router/bzip2_compression",
	"gaussmatrix-service/bzip2_compression",
]
console = [
	"gaussmatrix-core/console",
	"gaussmatrix-service/console",
]
direct_tls = [
    "gaussmatrix-router/direct_tls"
]
element_hacks = [
	"gaussmatrix-api/element_hacks",
	"gaussmatrix-service/element_hacks",
]
gzip_compression = [
	"gaussmatrix-admin/gzip_compression",
	"gaussmatrix-api/gzip_compression",
	"gaussmatrix-core/gzip_compression",
	"gaussmatrix-router/gzip_compression",
	"gaussmatrix-service/gzip_compression",
]
io_uring = [
	"gaussmatrix-admin/io_uring",
	"gaussmatrix-api/io_uring",
	"gaussmatrix-database/io_uring",
	"gaussmatrix-router/io_uring",
	"gaussmatrix-service/io_uring",
]
jemalloc = [
	"gaussmatrix-admin/jemalloc",
	"gaussmatrix-api/jemalloc",
	"gaussmatrix-core/jemalloc",
	"gaussmatrix-database/jemalloc",
	"gaussmatrix-router/jemalloc",
	"gaussmatrix-service/jemalloc",
]
jemalloc_conf = [
	"gaussmatrix-admin/jemalloc_conf",
	"gaussmatrix-api/jemalloc_conf",
	"gaussmatrix-core/jemalloc_conf",
	"gaussmatrix-database/jemalloc_conf",
	"gaussmatrix-router/jemalloc_conf",
	"gaussmatrix-service/jemalloc_conf",
]
jemalloc_prof = [
	"gaussmatrix-core/jemalloc_prof",
]
jemalloc_stats = [
	"gaussmatrix-core/jemalloc_stats",
]
ldap = [
	"gaussmatrix-api/ldap",
	"gaussmatrix-service/ldap",
]
lz4_compression = [
	"gaussmatrix-admin/lz4_compression",
	"gaussmatrix-api/lz4_compression",
	"gaussmatrix-database/lz4_compression",
	"gaussmatrix-router/lz4_compression",
	"gaussmatrix-service/lz4_compression",
]
media_thumbnail = [
	"gaussmatrix-service/media_thumbnail",
]
perf_measurements = [
	"dep:opentelemetry",
	"dep:opentelemetry-otlp",
	"dep:opentelemetry_sdk",
	"dep:tracing-flame",
	"dep:tracing-opentelemetry",
	"gaussmatrix-core/perf_measurements",
	"gaussmatrix-core/sentry_telemetry",
]
# increases performance, reduces build times, and reduces binary size by not compiling or
# genreating code for log level filters that users will generally not use (debug and trace)
release_max_log_level = [
	"tracing/max_level_trace",
	"tracing/release_max_level_info",
	"log/max_level_trace",
	"log/release_max_level_info",
	"gaussmatrix-admin/release_max_log_level",
	"gaussmatrix-api/release_max_log_level",
	"gaussmatrix-core/release_max_log_level",
	"gaussmatrix-database/release_max_log_level",
	"gaussmatrix-router/release_max_log_level",
	"gaussmatrix-service/release_max_log_level",
]
sentry_telemetry = [
	"dep:sentry",
	"dep:sentry-tracing",
	"dep:sentry-tower",
	"dep:reqwest",
	"gaussmatrix-core/sentry_telemetry",
	"gaussmatrix-router/sentry_telemetry",
]
systemd = [
	"gaussmatrix-router/systemd",
]
# enable the tokio_console server ncompatible with release_max_log_level
tokio_console = [
	"dep:console-subscriber",
	"tokio/tracing",
]
url_preview = [
	"gaussmatrix-service/url_preview",
]
zstd_compression = [
	"gaussmatrix-admin/zstd_compression",
	"gaussmatrix-api/zstd_compression",
	"gaussmatrix-core/zstd_compression",
	"gaussmatrix-database/zstd_compression",
	"gaussmatrix-router/zstd_compression",
	"gaussmatrix-service/zstd_compression",
]
gaussmatrix_mods = [
	"gaussmatrix-core/gaussmatrix_mods",
]

[dependencies]
gaussmatrix-admin.workspace = true
gaussmatrix-api.workspace = true
gaussmatrix-core.workspace = true
gaussmatrix-database.workspace = true
gaussmatrix-macros.workspace = true
gaussmatrix-router.workspace = true
gaussmatrix-service.workspace = true

clap.workspace = true
console-subscriber.optional = true
console-subscriber.workspace = true
const-str.workspace = true
ctor.workspace = true
dtor.workspace = true
log.workspace = true
opentelemetry-otlp.optional = true
opentelemetry-otlp.workspace = true
opentelemetry.optional = true
opentelemetry.workspace = true
opentelemetry_sdk.optional = true
opentelemetry_sdk.workspace = true
reqwest.optional = true
reqwest.workspace = true
sentry-tower.optional = true
sentry-tower.workspace = true
sentry-tracing.optional = true
sentry-tracing.workspace = true
sentry.optional = true
sentry.workspace = true
tokio-metrics.optional = true
tokio-metrics.workspace = true
tokio.workspace = true
tracing-flame.optional = true
tracing-flame.workspace = true
tracing-opentelemetry.optional = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
webpki-root-certs.workspace = true

[dev-dependencies]
criterion.workspace = true
insta.workspace = true
maplit.workspace = true
similar.workspace = true

[lints]
workspace = true

[lib]
path = "lib.rs"
bench = false
crate-type = ["rlib"]

[[bin]]
name = "gaussmatrix"
path = "main.rs"
bench = false

[[bench]]
name = "main"
harness = false
