[package]
name = "gaussmatrix_router"
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lib]
path = "mod.rs"
bench = false
crate-type = [
	"rlib",
#	"dylib",
]

[features]
brotli_compression = [
	"gaussmatrix-admin/brotli_compression",
	"gaussmatrix-api/brotli_compression",
	"gaussmatrix-core/brotli_compression",
	"gaussmatrix-service/brotli_compression",
	"tower-http/compression-br",
]
bzip2_compression = [
	"gaussmatrix-admin/bzip2_compression",
	"gaussmatrix-api/bzip2_compression",
	"gaussmatrix-service/bzip2_compression",
]
direct_tls = [
	"axum-server/tls-rustls",
	"dep:rustls",
	"dep:axum-server-dual-protocol",
]
gzip_compression = [
	"gaussmatrix-admin/gzip_compression",
	"gaussmatrix-api/gzip_compression",
	"gaussmatrix-core/gzip_compression",
	"gaussmatrix-service/gzip_compression",
	"tower-http/compression-gzip",
]
io_uring = [
	"gaussmatrix-admin/io_uring",
	"gaussmatrix-api/io_uring",
	"gaussmatrix-service/io_uring",
]
jemalloc = [
	"gaussmatrix-admin/jemalloc",
	"gaussmatrix-api/jemalloc",
	"gaussmatrix-core/jemalloc",
	"gaussmatrix-service/jemalloc",
]
jemalloc_conf = [
	"gaussmatrix-admin/jemalloc_conf",
	"gaussmatrix-api/jemalloc_conf",
	"gaussmatrix-core/jemalloc_conf",
	"gaussmatrix-service/jemalloc_conf",
]
jemalloc_prof = [
	"gaussmatrix-admin/jemalloc_prof",
	"gaussmatrix-api/jemalloc_prof",
	"gaussmatrix-core/jemalloc_prof",
	"gaussmatrix-service/jemalloc_prof",
]
jemalloc_stats = [
	"gaussmatrix-admin/jemalloc_stats",
	"gaussmatrix-api/jemalloc_stats",
	"gaussmatrix-core/jemalloc_stats",
	"gaussmatrix-service/jemalloc_stats",
]
lz4_compression = [
	"gaussmatrix-admin/lz4_compression",
	"gaussmatrix-api/lz4_compression",
	"gaussmatrix-service/lz4_compression",
]
release_max_log_level = [
	"gaussmatrix-admin/release_max_log_level",
	"gaussmatrix-api/release_max_log_level",
	"gaussmatrix-core/release_max_log_level",
	"gaussmatrix-service/release_max_log_level",
	"tracing/max_level_trace",
	"tracing/release_max_level_info",
	"log/max_level_trace",
	"log/release_max_level_info",
]
sentry_telemetry = [
	"gaussmatrix-core/sentry_telemetry",
	"dep:sentry",
	"dep:sentry-tracing",
	"dep:sentry-tower",
]
systemd = [
	"dep:sd-notify",
]
zstd_compression = [
	"gaussmatrix-api/zstd_compression",
	"gaussmatrix-core/zstd_compression",
	"gaussmatrix-service/zstd_compression",
	"tower-http/compression-zstd",
]

[dependencies]
axum-server-dual-protocol.workspace = true
axum-server-dual-protocol.optional = true
axum-server.workspace = true
axum.workspace = true
bytes.workspace = true
const-str.workspace = true
ctor.workspace = true
dtor.workspace = true
futures.workspace = true
http.workspace = true
http-body-util.workspace = true
ipnet.workspace = true
log.workspace = true
ruma.workspace = true
rustls.workspace = true
rustls.optional = true
sentry.optional = true
sentry-tower.optional = true
sentry-tower.workspace = true
sentry-tracing.optional = true
sentry-tracing.workspace = true
sentry.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
gaussmatrix-admin.workspace = true
gaussmatrix-api.workspace = true
gaussmatrix-core.workspace = true
gaussmatrix-service.workspace = true

[target.'cfg(all(unix, target_os = "linux"))'.dependencies]
sd-notify.workspace = true
sd-notify.optional = true

[lints]
workspace = true
